# 100X_DISCOVERY

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  Backend  Frontend  GitHub Workflow  README  README.md  SEMANTIC_SEARCH.md  Structure  Wholesome  docker-compose.yml  main.yml  pyproject.toml  verify_structure.py
.github/workflows/: backend-ci.yml  bakend-ci.yml  frontend-ci.yml
backend/: .env.test  README.md  SEMANTIC_SEARCH.md  requirements.txt  simple_test.py  test_semantic_search.py  test_trigger.py
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/models/: __init__.py  profile.py
backend/app/routers/: __init__.py  profiles.py  search.py
backend/app/services/: __init__.py  groq_service.py  groq_service_fixed.py  profile_service.py
backend/data/: profiles.json
backend/tests/: __init__.py  conftest.py  test_basic.py  test_profiles.py  test_search.py  test_semantic_search.py
frontend/: .env.local  README.md  STARTUP_GUIDE.md  requirements.txt  run_streamlit.bat  run_streamlit.ps1  run_streamlit_and_backend.bat  run_streamlit_and_backend.ps1  streamlit_app.py  test_config.py  test_trigger.py
frontend/.streamlit/: config.toml
frontend/pages/: 2_Search.py  _Profile_Creation.py
frontend/src/: app.py  config.py
frontend/src/components/: __init__.py  profile_form.py  profile_list.py  search_interface.py
frontend/src/utils/: api.py
frontend/tests/: __init__.py  test_basic.py
